--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="icon" href="./bin_trash_delete_remove_recycle_icon_146878.ico">
     <link rel="stylesheet" href="./project.css">
     <title>Travel</title>
 </head>
