--- a/projectFashion.html
+++ b/projectFashion.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./project.css"> <!-- doua puncte inante ca sa mearga-->
+    <link rel="icon" href="./bin_trash_delete_remove_recycle_icon_146878.ico">
     <title>Travel</title>
 </head>
 <body data-barba="wrapper">
