--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main data-barba="container" data-barba-namespace="home">
         <section class="montain slide">
             <div class="hero-img">
-                <img src="./img/forest.png" alt="forest image">
+                <img src="./forest.png" alt="forest image">
                 <div class="reveal-img"></div>
             </div>
             <div class="hero-desc">
@@ -34,7 +34,7 @@
         </section>
         <section class="hike slide">
             <div class="hero-img">
-                <img src="./img/hike.png" alt="hike image">
+                <img src="./hike.png" alt="hike image">
                 <div class="reveal-img"></div>
             </div>
             <div class="hero-desc">
@@ -49,7 +49,7 @@
         </section>
         <section class="fashion slide">
             <div class="hero-img">
-                <img src="./img/fashion.png" alt="fashion image">
+                <img src="./fashion.png" alt="fashion image">
                 <div class="reveal-img"></div>
             </div>
             <div class="hero-desc">
