--- a/projectFashion.html
+++ b/projectFashion.html
@@ -23,7 +23,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quod, sunt consectetur nemo sit harum soluta suscipit recusandae ab cum!</p>
             </div>
             <div class="fashion-img">
-                <img src="./img/fashion-img1.png" alt="">
+                <img src="./fashion-img1.png" alt="">
             </div>
             <div class="fashion-nr"><span>01</span></div>
         </section>
@@ -33,7 +33,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quod, sunt consectetur nemo sit harum soluta suscipit recusandae ab cum!</p>
             </div>
             <div class="fashion-img">
-                <img src="./img/fashion-img2.png" alt="">
+                <img src="./fashion-img2.png" alt="">
             </div>
             <div class="fashion-nr"><span>02</span></div>
         </section>
@@ -43,7 +43,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quod, sunt consectetur nemo sit harum soluta suscipit recusandae ab cum!</p>
             </div>
             <div class="fashion-img">
-                <img src="./img/fashion-img3.png" alt="">
+                <img src="./fashion-img3.png" alt="">
             </div>
             <div class="fashion-nr"><span>03</span></div>
         </section>
