--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="title-swipe t-swipe3"></div>
                 </div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto molestias eaque officia voluptas provident officiis sit consequatur facilis expedita autem!</p>
-                <a href="./projectFashion.html" class="explore fashion-exp">Explore</a>
+                <a href="./index-2.html" class="explore fashion-exp">Explore</a>
                 <div class="reveal-text"></div>
             </div>
         </section>
