--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body data-barba="wrapper"> <!-- ce nu vrem sa fie modificat-->
     <header class="nav-header">
-        <h1><a href="./project.html" id="logo">dayZ.</a></h1>
+        <h1><a href="./index.html" id="logo">dayZ.</a></h1>
         <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
